# modular-robotics

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Colors.cpp  Colors.h  ConfigurationSpace.cpp  ConfigurationSpace.h  CoordTensor.cpp  CoordTensor.h  HashedState.cpp  HashedState.h  Isometry.cpp  Isometry.h  LICENSE  Lattice.cpp  Lattice.h  LatticeSetup.cpp  LatticeSetup.h  Makefile  MetaModule.cpp  MetaModule.h  Metamodule.cpp  Metamodule.h  ModuleManager.cpp  ModuleManager.h  MoveManager.cpp  MoveManager.h  README.md  Scenario.cpp  Scenario.h  SearchAnalysis.cpp  SearchAnalysis.h  debug_util.h  generate.py  gui.py  main.cpp  test1.json  test1.txt
.github/workflows/: c-cpp.yml
3DTiler/: Index.html
3DTiler/src/: 2dScreen.js  3dScreen.js  Cube.js  hexagon.js  rhomDod.js  sketch.js
Module Properties/: ColorProperty.json
Moves/: Leapfrog.json  Leapfrog_1.txt  Leapfrog_2.txt  Monkey.json  Monkey_1.txt  Monkey_2.txt  Pivot.json  Pivot_1.txt  Pivot_2.txt  Slide_1.txt  Slide_2.txt
Moves-Disabled/: Catom.json  NASA.json  RhombicDodeca.json  RhombicDodecaMonkey.json  Slide.json
Visualization/: main  makefile
Visualization/Scenarios/: 2x2x2_Metamodule.scen  3d2rMeta.scen  IllegalPivotMove.scen  LegalSlide_IllegalPivot.scen
Visualization/Scenarios/Testing/: 3x3_Candidate.scen  3x3x3_Candidate.scen  LegalSlide_IllegalPivot.scen  Simple.scen  SlidingTests.scen
Visualization/include/: Animation.hpp  AnimationSequence.hpp  Cube.hpp  Move.hpp  MoveSequence.hpp  ObjectCollection.hpp  Scenario.hpp  Shader.hpp
Visualization/resources/shaders/: fshader.glsl  vshader.glsl
Visualization/src/: .main.cpp.swp  Animation.cpp  AnimationSequence.cpp  Cube.cpp  Move.cpp  MoveSequence.cpp  ObjectCollection.cpp  Scenario.cpp  Shader.cpp  main.c  main.cpp  setuputils.cpp  userinput.cpp
WebVis/: '  index.html
WebVis/Scenarios/: 3d2rMeta.scen  3x3 Metamodule Sub-case 1.scen  3x3 Metamodule Sub-case 2.scen  3x3 Metamodule Sub-case 3.scen  3x3 Metamodule.scen  820.scen  Cube Debugging.scen  RDTesting.scen  SlidingTests.scen
WebVis/src/: GUI.js  Module.js  ModuleGeometries.js  ModuleMaterials.js  Move.js  MoveSequence.js  Scenario.js  User.js  main.js  utils.js
docs/: Makefile
docs/examples/: 2_by_2_metamodule.cpp  820_final.json  820_initial.json  basic_3d_final.json  basic_3d_initial.json  move_line.cpp  move_line_final.json  move_line_upside_down_3d_final.json  move_line_upside_down_3d_initial.json  move_line_with_colors_final.json  move_line_with_colors_initial.json  zigzag_final.json  zigzag_initial.json
docs/examples/moves/move_line_with_colors/: move_line_with_colors.cpp
docs/examples/moves/move_zigzag/: move_zigzag.cpp  zigzag_initial.json
gui/: gui.cpp  gui.py  window.cpp  window.h
pathfinder/: Makefile  main.cpp
pathfinder/coordtensor/: CoordTensor.h
pathfinder/lattice/: Lattice.cpp  Lattice.h  LatticeSetup.cpp  LatticeSetup.h
pathfinder/modules/: Colors.cpp  Colors.h  Metamodule.cpp  Metamodule.h  ModuleManager.cpp  ModuleManager.h  ModuleProperties.cpp  ModuleProperties.h
pathfinder/moves/: Isometry.h  MoveManager.cpp  MoveManager.h  Scenario.cpp  Scenario.h
pathfinder/properties/: Colors.cpp  Colors.h
pathfinder/search/: ConfigurationSpace.cpp  ConfigurationSpace.h  HeuristicCache.cpp  HeuristicCache.h
pathfinder/utility/: color_util.cpp  color_util.h
tests/: Makefile  colorTest.cpp
tests/benchmarks/: benchmarks.cpp
tests/metamodule/: metamodule_1.cpp  test_1.cpp
tests/proprety-based-checking/: astar.cpp
tests/unit-tests/colors/: colorTest.cpp
